src/Components/Dashboard/Dashboard.scss
.Dashboard {
  @import '../../scss/bootstrap';

  background-color: $dashboardBackground;

  &__headerCard {
    // background: rgba(38, 153, 251, 0.7);
    background: var(--primary-blue);
    background: linear-gradient(180deg, var(--primary-blue) 0%, rgba(249, 253, 255, 0.7) 100%);
  }

  &__profileImage {
    height: $spacer * 5;
    width: $spacer * 5;
    border-radius: 10px;
  }

  &__headingText {
    font-family: 'Montserrat-Regular';
    line-height: 29px;
    color: $headingGrey;
    padding-top: 0.875rem;

    @include media-breakpoint-up(sm) {
      font-size: 1.75rem;
      padding-top: 1.25rem;
    }
  }

  &__todaysHits {
    width: 95%;
    height: 150px;
    border-radius: 10px;
    background-color: $white;
    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.7);
  }

  &__todaysHitsText {
    font-family: 'Montserrat-SemiBold';
    color: $headingGrey;
    line-height: $spacer * 1.25;
    font-size: x-large;

    @include media-breakpoint-down(md) {
      font-size: $spacer * 0.875;
    }
  }

  &__innovation {
    background: #fff4ec;
    border-radius: 10px;

    // background: linear-gradient(90deg, #fcf9f8, #fff4ec);
  }

  &__innovation > h4 {
    font-family: 'Montserrat-Bold';
    line-height: $spacer * 1.8125;
    // color: var(--primary-blue);
    color: #fe979c;
  }

  &__innovation > h4 > span {
    color: #3e3b6fde;
  }

  &__innovation > p {
    font-size: $spacer;
    color: #575381;
    line-height: $spacer * 1.8;
    letter-spacing: 0.49px;
    font-family: 'Montserrat-SemiBold';
  }

  &__scrollableCard {
    min-width: 100%;
    min-height: 76px;
    display: flex;
    overflow-x: auto;
  }

  &__scrollableCard::-webkit-scrollbar {
    display: none;
  }

  &__scrollableCard > div {
    min-width: 220px;
    margin: 5px;
    background: rgb(254, 255, 233);
    background: linear-gradient(90deg, rgba(254, 255, 233, 1) 0%, rgba(247, 255, 128, 1) 100%);
    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
    border: 1px solid transparent;
    border-radius: 10px;
  }

  &__scrollableCard > div:first-child {
    background: rgb(241, 255, 230);
    background: linear-gradient(90deg, rgba(241, 255, 230, 1) 0%, rgba(181, 253, 127, 1) 100%);
  }

  &__scrollableCardHeading {
    font-size: $spacer * 1;
    color: $headingGrey;
    line-height: $spacer * 1.25;
    font-family: 'Montserrat-SemiBold';
    padding-bottom: 7px;

    @include media-breakpoint-down(md) {
      font-size: $spacer * 0.75;
      padding-bottom: 5px;
    }
  }

  &__scrollableCardText {
    font-size: $spacer * 0.625;
    font-family: 'Montserrat-Regular';
    color: $dashboardBlack;
  }

  &__attendanceCard {
    border-radius: 10px;
    border-left: 30px solid var(--lighter-blue);
    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
    width: 87%;
  }

  &__attendanceSubHeading {
    font-family: 'Montserrat-Regular';
    line-height: 15px;
    color: $dashboardBlack;
  }

  &__attendanceRecents {
    font-size: $spacer * 0.625;
    font-family: $semiBold;
    color: $dashboardBlack;
    line-height: 13px;
  }

  &__noticeBoard {
    position: relative;
    width: 85%;
    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
    border-radius: 10px;

    @include media-breakpoint-down(sm) {
      width: 95%;
    }
  }

  &__verticalDots {
    position: absolute;
    top: 15px;
    right: 5px;
  }

  &__noticeBoardText {
    font-size: large;
    color: $dashboardBlack;
    font-family: 'Montserrat-Medium';

    @include media-breakpoint-down(md) {
      font-size: $spacer * 0.75;
      line-height: 15px;
    }
  }

  &__notice {
    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
    border-radius: 5px;
    // width: 100%;
    margin-bottom: 10px;
  }

  &__noticeImage {
    height: 50px;
    width: 50px;
    border-radius: 50%;
  }

  &__noticeSubHeading {
    font-size: $spacer * 0.825;
    font-family: 'Montserrat-Light';
    color: $headingGrey;
    line-height: 13px;

    @include media-breakpoint-down(sm) {
      font-size: $spacer * 0.625;
    }
  }

  &__noticeText {
    background-color: var(--primary-blue);
    font-family: 'Montserrat-Medium';
    font-size: $spacer * 0.75;
    color: $headingGrey;
    line-height: 15px;
    border-radius: 0 0 5px 5px;
    opacity: 0.75;
  }

  &__admissionsBlueText {
    color: var(--primary-blue);
    font-size: $spacer * 1.5;
    font-family: $bold;
  }
  &_homeworkCreator {
    @include media-breakpoint-up(sm) {
      margin-left: 6%;
    }
  }

  &__attendanceLogo {
    width: 54px;
    @include media-breakpoint-up(sm) {
      width: 80px;
    }
  }

  &__NoticeIcon {
    width: 82px;
    height: 76px;
  }
}
.HWscrollableCard {
  background: linear-gradient(103deg, #ffefeb, #feae96) !important;
  border: 0px !important;
}
.HWscrollableCard2 {
  background: linear-gradient(103deg, #f9efff, #705a7e) !important;
  border: 0px !important;
}

.react_chart {
  width: 50%;
  margin: auto;
}
.noticeboard_img {
  text-align: right;
  padding-right: 40px;
  padding-left: 0px;
}
.noticeboard_heading {
  padding-top: 30px;
}
.admission_heroImage {
  width: 50%;
  margin: auto;
  text-align: center;
}

.admission_cards {
  width: 85%;
}

.admission_button {
  padding-right: 15px;
  padding-left: 15px;
}

.Dashboard__attendanceSubHeading {
  font-size: 15px;
}

.floatingChatButtonDashboard {
  position: fixed;
  cursor: pointer;
  outline: none;
  background-color: var(--primary-blue);
  border-radius: 100px;
  color: white;
  bottom: 18px;
  right: 20px;
  padding: 12px 50px;
  border: transparent;
  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.46);
  z-index: 50;
}

.dotOnFloatingButton {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  bottom: 55px;
  right: 26px;
  color: white;
  background-color: red;
  border-radius: 100px;
  width: 20px;
  min-width: fit-content;
  height: 20px;
  z-index: 60;
  font-family: 'Montserrat-Regular';
  font-size: 12px;
  padding: 3px;
}

@media screen and (max-width: 700px) {
  .floatingChatButtonDashboard {
    right: 14px;
  }
}

@media screen and (max-width: 700px) {
  .noticeboard_img {
    width: 100%;
  }
  .react_chart {
    width: 100%;
    margin: auto;
  }
  .admission_cards {
    width: 100%;
  }
}

@media screen and (max-width: 320px) {
  .react_chart {
    width: 100%;
    margin: auto;
  }
  .admission_cards {
    width: 100%;
  }

  .admission_button {
    padding-left: 5px;
    padding-right: 5px;
  }
}

@media screen and (max-width: 450px) {
  .Dashboard__attendanceSubHeading {
    font-size: 12px;
  }
}

.dashboardLogoImage {
  display: block;
  margin: auto;
  width: 100%;
  justify-content: center;
  text-align: center;
}
.nameAndProfilePic {
  margin-left: 0px;
  margin-right: 0px;
  width: 100%;
  transition-duration: 0.5s;
  transition-property: opacity;
}

